--- a/src/.deps/perftest_communication.Po
+++ b/src/.deps/perftest_communication.Po
@@ -106,7 +106,7 @@ src/perftest_communication.o: src/perftest_communication.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/socket.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/socket.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/posix_types.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/stddef.h \
+ /home/andrewh8/src/rdma-core/build/include/linux/stddef.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/posix_types.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/posix_types_64.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/posix_types.h \
@@ -124,7 +124,7 @@ src/perftest_communication.o: src/perftest_communication.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/__sigval_t.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/netdb.h \
  src/perftest_communication.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/verbs.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/verbs.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stdint.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdint.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/wchar.h \
@@ -144,11 +144,12 @@ src/perftest_communication.o: src/perftest_communication.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/types.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/types.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/int-ll64.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/verbs_api.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/ib_user_ioctl_verbs.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/rdma/ib_user_verbs.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/rdma/rdma_cma.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/sa.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/if_ether.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/verbs_api.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/ib_user_ioctl_verbs.h \
+ /home/andrewh8/src/rdma-core/build/include/rdma/ib_user_verbs.h \
+ /home/andrewh8/src/rdma-core/build/include/rdma/rdma_cma.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/sa.h \
  src/perftest_resources.h src/rvma_write.h src/rvma_common.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stdbool.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/mman.h \
@@ -161,10 +162,10 @@ src/perftest_communication.o: src/perftest_communication.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/inttypes.h \
  src/get_clock.h src/perftest_counters.h src/memory.h config.h \
  src/rvma_mailbox_hashmap.h src/rvma_buffer_queue.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/mlx5dv.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/tm_types.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/mlx5_api.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/mlx5_user_ioctl_verbs.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/mlx5dv.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/tm_types.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/mlx5_api.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/mlx5_user_ioctl_verbs.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/math.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/math-vector.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/libm-simd-decl-stubs.h \
@@ -183,7 +184,7 @@ src/perftest_communication.o: src/perftest_communication.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/struct_stat.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fcntl2.h \
  src/host_memory.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/efadv.h
+ /home/andrewh8/src/rdma-core/build/include/infiniband/efadv.h
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdc-predef.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdio.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/libc-header-start.h:
@@ -291,7 +292,7 @@ src/perftest_communication.o: src/perftest_communication.c \
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/socket.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/socket.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/posix_types.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/stddef.h:
+/home/andrewh8/src/rdma-core/build/include/linux/stddef.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/posix_types.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/posix_types_64.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/posix_types.h:
@@ -309,7 +310,7 @@ src/perftest_communication.o: src/perftest_communication.c \
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/__sigval_t.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/netdb.h:
 src/perftest_communication.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/verbs.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/verbs.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stdint.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdint.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/wchar.h:
@@ -329,11 +330,12 @@ src/perftest_communication.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/types.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/types.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/int-ll64.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/verbs_api.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/ib_user_ioctl_verbs.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/rdma/ib_user_verbs.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/rdma/rdma_cma.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/sa.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/if_ether.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/verbs_api.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/ib_user_ioctl_verbs.h:
+/home/andrewh8/src/rdma-core/build/include/rdma/ib_user_verbs.h:
+/home/andrewh8/src/rdma-core/build/include/rdma/rdma_cma.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/sa.h:
 src/perftest_resources.h:
 src/rvma_write.h:
 src/rvma_common.h:
@@ -352,10 +354,10 @@ src/memory.h:
 config.h:
 src/rvma_mailbox_hashmap.h:
 src/rvma_buffer_queue.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/mlx5dv.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/tm_types.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/mlx5_api.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/mlx5_user_ioctl_verbs.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/mlx5dv.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/tm_types.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/mlx5_api.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/mlx5_user_ioctl_verbs.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/math.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/math-vector.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/libm-simd-decl-stubs.h:
@@ -374,4 +376,4 @@ src/rvma_buffer_queue.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/struct_stat.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/fcntl2.h:
 src/host_memory.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/efadv.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/efadv.h:
