--- a/src/.deps/perftest_counters.Po
+++ b/src/.deps/perftest_counters.Po
@@ -73,6 +73,7 @@ src/perftest_counters.o: src/perftest_counters.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/strings.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/strings_fortified.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/string_fortified.h \
+ /home/andrewh8/src/rdma-core/build/include/sys/stat.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/stat.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/statx.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/stat.h \
@@ -83,7 +84,7 @@ src/perftest_counters.o: src/perftest_counters.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/bitsperlong.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/bitsperlong.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/posix_types.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/stddef.h \
+ /home/andrewh8/src/rdma-core/build/include/linux/stddef.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/posix_types.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/posix_types_64.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/posix_types.h \
@@ -91,7 +92,7 @@ src/perftest_counters.o: src/perftest_counters.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/struct_statx_timestamp.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/struct_statx.h \
  src/perftest_parameters.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/verbs.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/verbs.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stdint.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdint.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/wchar.h \
@@ -116,9 +117,10 @@ src/perftest_counters.o: src/perftest_counters.c \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/errno.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/errno-base.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/error_t.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/verbs_api.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/ib_user_ioctl_verbs.h \
- /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/rdma/ib_user_verbs.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/if_ether.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/verbs_api.h \
+ /home/andrewh8/src/rdma-core/build/include/infiniband/ib_user_ioctl_verbs.h \
+ /home/andrewh8/src/rdma-core/build/include/rdma/ib_user_verbs.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/unistd.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/posix_opt.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/environments.h \
@@ -207,6 +209,7 @@ src/perftest_counters.o: src/perftest_counters.c \
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/strings.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/strings_fortified.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/string_fortified.h:
+/home/andrewh8/src/rdma-core/build/include/sys/stat.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/stat.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/statx.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/stat.h:
@@ -217,7 +220,7 @@ src/perftest_counters.o: src/perftest_counters.c \
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/bitsperlong.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/bitsperlong.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/posix_types.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/stddef.h:
+/home/andrewh8/src/rdma-core/build/include/linux/stddef.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/posix_types.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm/posix_types_64.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/posix_types.h:
@@ -225,7 +228,7 @@ src/perftest_counters.o: src/perftest_counters.c \
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/struct_statx_timestamp.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/struct_statx.h:
 src/perftest_parameters.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/verbs.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/verbs.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stdint.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/stdint.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/wchar.h:
@@ -250,9 +253,10 @@ src/perftest_parameters.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/errno.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/asm-generic/errno-base.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/types/error_t.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/verbs_api.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/infiniband/ib_user_ioctl_verbs.h:
-/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/rdma/ib_user_verbs.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/linux/if_ether.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/verbs_api.h:
+/home/andrewh8/src/rdma-core/build/include/infiniband/ib_user_ioctl_verbs.h:
+/home/andrewh8/src/rdma-core/build/include/rdma/ib_user_verbs.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/unistd.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/posix_opt.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/bits/environments.h:
