--- a/src/.deps/rvma_mailbox_server.Po
+++ b/src/.deps/rvma_mailbox_server.Po
@@ -129,6 +129,8 @@ src/rvma_mailbox_server.o: src/rvma_mailbox_server.c \
  /home/andrewh8/src/rdma-core/build/include/infiniband/ib_user_ioctl_verbs.h \
  /home/andrewh8/src/rdma-core/build/include/rdma/ib_user_verbs.h \
  /home/andrewh8/src/rdma-core/build/include/infiniband/sa.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/ifaddrs.h \
+ /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/arpa/inet.h \
  src/rvma_mailbox_hashmap.h src/rvma_common.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stdbool.h \
  /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/sys/mman.h \
@@ -272,6 +274,8 @@ src/rvma_mailbox_server.o: src/rvma_mailbox_server.c \
 /home/andrewh8/src/rdma-core/build/include/infiniband/ib_user_ioctl_verbs.h:
 /home/andrewh8/src/rdma-core/build/include/rdma/ib_user_verbs.h:
 /home/andrewh8/src/rdma-core/build/include/infiniband/sa.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/ifaddrs.h:
+/cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/include/arpa/inet.h:
 src/rvma_mailbox_hashmap.h:
 src/rvma_common.h:
 /cvmfs/soft.computecanada.ca/gentoo/2023/x86-64-v3/usr/lib/gcc/x86_64-pc-linux-gnu/12/include/stdbool.h:
